# FrankaEmikaPandaDynModel

./: .gitmodules  README.txt  package.json
V-REP/models/: FrankaEmikaPanda.ttm
cpp/: README.txt
cpp/panda_dyn_model_example/: CMakeLists.txt
cpp/panda_dyn_model_example/include/: franka_model.h
cpp/panda_dyn_model_example/src/: FrictionTorque.cpp  GravityVector.cpp  MassMatrix.cpp  Model_example.cpp
matlab/ConvertDynPars2VREP/: DynPars2VREP.m
matlab/data/Exciting_Traj/Trajectory_1/: gen_dq.txt  gen_params.txt  gen_q0.txt  gen_time.txt
matlab/data/Exciting_Traj/Trajectory_1/rbt_log/: exciting_traj_positions.txt  exciting_traj_time.txt  exciting_traj_torques.txt  exciting_traj_velocity.txt
matlab/data/good_confs/: GOOD_CONFS_1010.txt
matlab/dyn_model_panda/: README.txt  get_CoriolisMatrix.m  get_CoriolisVector.m  get_FrictionTorque.m  get_GravityVector.m  get_MassMatrix.m  main.m  readme.txt
matlab/generate_joint_traj/: AutomaticExcTrjGen.m  CalcFeasibleRandomJointsPositions.m
matlab/parameters_retrieval/: README.txt  bounds_gM.csv  bounds_gM_friction.csv  check_inertia_condition.m  error_fcn_gM_LMI.m  error_fcn_gM_LMI_regressor.asv  error_fcn_gM_LMI_regressor.m  get_Panda_coefficients_expanded.asv  get_Panda_coefficients_expanded.m  main.asv  main.m  read_bounds.m
matlab/utils/: DirectKinematic.m  FramesChainFromDH.m  GeneralizedSteiner.m  LoadFrankaSTLModel.m  Load_Franka_DH.m  PlotChain.m  PlotFrame.m  getPatches.m  randJointPos.m  stlread.m
python/: README.md  cpp_export.cpp  example.py  panda_dyn_model.py  setup.py
